--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">BearBit</string>
-    <string name="email">Email:</string>
-    <string name="password">Password:</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
     <string name="login_logo">login_logo</string>
     <string name="next">></string>
     <string name="sign_up">Sign Up</string>
@@ -9,6 +9,11 @@
     <string name="sign_up_email">Please enter your email:</string>
     <string name="sign_up_password">Set up a password:</string>
     <string name="sign_up_age">Please enter your age:</string>
+    <string name='not_user'>Not a user?</string>
+    <string name='register'>Register</string>
+    <string name="name">Name</string>
+    <string name="repeat_password">Repeat Password</string>
+    <string name="dob">D.O.B</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
