Google Sign-in Bug Fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="menu_running_tracker">Running Tracker</string>
     <string name="menu_stats">Stats</string>
     <string name="menu_account_settings">Account Settings</string>
+    <string name="title_activity_running_tracker">RunningTracker</string>
+
+    <string name="home_second">Home Second</string>
+    <string name="title_activity_drawer">DrawerActivity</string>
 </resources>
